@@ -468,13 +468,13 @@ findcorpus(char *s, CorpusType type, int try_recursive_search)
   CorpusList *sp, *tmp;
   char *colon;
 
-  char mother_corpus[64];
+  char mother_corpus[CL_MAX_LINE_LENGTH];
   char *expansion;
   char *real_name;
 
   if (type != SYSTEM) {
     if ((colon = strchr(s, COLON)) != NULL) {
-      strcpy(mother_corpus, s);
+      cl_strcpy(mother_corpus, s);
       mother_corpus[colon - s] = '\0';
       real_name = colon + 1;
     }
@@ -490,10 +490,15 @@ findcorpus(char *s, CorpusType type, int try_recursive_search)
 
   expansion = strchr(real_name, SLASH);
 
-  if (mother_corpus[0] == '\0')
-    sp = LoadedCorpus(real_name, NULL, type);
-  else
-    sp = LoadedCorpus(real_name, mother_corpus, type);
+  if (expansion) {
+    sp = NULL; /* don't re-use existing subcorpus generated by implicit expansion */
+  }
+  else {
+    if (mother_corpus[0] == '\0')
+      sp = LoadedCorpus(real_name, NULL, type);
+    else
+      sp = LoadedCorpus(real_name, mother_corpus, type);
+  }
 
   /* We need to call ensure_corpus_size() to implement delayed loading. */
   if (sp) {
@@ -503,10 +508,10 @@ findcorpus(char *s, CorpusType type, int try_recursive_search)
   /* (sp==0): try to find corpus through implicit expansion ("A^s" == "A expand to s") */
   else if (type != SYSTEM && expansion && try_recursive_search) {
       
-    char new_name[128];
+    char new_name[CL_MAX_LINE_LENGTH];
     Context ctx;
 
-    strcpy(new_name, real_name);
+    cl_strcpy(new_name, real_name);
     new_name[expansion - real_name] = '\0';
 
     if (mother_corpus[0] == '\0')
@@ -522,12 +527,15 @@ findcorpus(char *s, CorpusType type, int try_recursive_search)
         return NULL; 
       if (!access_corpus(sp))
         return NULL;
+      if (sp->type == SYSTEM) {
+        cqpmessage(Warning, "Implicit expansion %s only allowed for named query result.", s);
+        return NULL;
+      }
       
       assert(sp->corpus);
       
       if ((ctx.attrib = find_attribute(sp->corpus, expansion+1, ATT_STRUC, NULL)) == NULL) {
-        cqpmessage(Warning, "Can't expand to ``%s'' -- \n"
-                   "no such structural attribute in %s",
+        cqpmessage(Warning, "Can't expand to <%s> regions -- no such structural attribute in %s",
                    expansion+1, sp->mother_name);
         return NULL;
       }
@@ -535,11 +543,10 @@ findcorpus(char *s, CorpusType type, int try_recursive_search)
       ctx.type = structure;
       ctx.size = 1;
 
-
-      tmp = duplicate_corpus(sp, real_name, False);
+      tmp = duplicate_corpus(sp, real_name, True);
       
       if (tmp == NULL) {
-        fprintf(stderr, "Weird error in findcorpus\n");
+        fprintf(stderr, "Internal error in findcorpus() -- this should not happen!\n");
         return NULL;
       }
 
