@@ -151,7 +151,7 @@ cqp_custom_completion(const char *text, int start, int end) {
   Variable var;
   CorpusList *cl;
   char *prototype, *prefix;
-  char mother[128];
+  char mother[CL_MAX_LINE_LENGTH];
   char *real_name, *colon;
   int mother_len, real_len, prefix_len;
   char *completion;
@@ -233,7 +233,7 @@ cqp_custom_completion(const char *text, int start, int end) {
    */
   cc_compl_list_init();
   colon = strchr(text, ':');
-  if ((colon != NULL) && ((mother_len = colon - text) < 128)) {
+  if ((colon != NULL) && ((mother_len = colon - text) < CL_MAX_LINE_LENGTH)) {
     /* full subcorpus specifier: ''HGC:Last'' */
     strncpy(mother, text, mother_len);
     mother[mother_len] = '\0';
@@ -343,7 +343,7 @@ ensure_semicolon (char *line) {
 void
 readline_main(void)
 {
-  char prompt[512];
+  char prompt[CL_MAX_LINE_LENGTH];
   char *input = NULL;
 
   /* activate CQP's custom completion function */
