@@ -32,7 +32,13 @@ Bug fixes:
  
  - [2013-05-08: v3.4.7] Fixed problems with command-line completion on Mac OS X (bugs #8 and #55); #8 was a 
    buffer overflow for long lists of completion candidates; #55 is fixed by auto-detecting a genuine GNU Readline
-   library installed by the user in /usr/local or with a package manager such as HomeBrew
+   library installed by the user in /usr/local or with a package manager such as HomeBrew.
+   
+ - [2013-05-09] Fixed bug #45: implicit expansion of named query result (e.g. with A^s) is recomputed on every
+   access, so it updates automatically if the underlying query A is changed. This produces noticeable overhead
+   only for query results containing more than 10 million matches, and usage of implict expansion is deprecated.
+   Parser now distinguishes between plain IDs and named query specifiers (e.g. BNC:Result^s), so it is no longer
+   possible to use A^s as the name of a query result.
 
 Version 3.2
 -----------
